clean code tests